--- a/Css/style.css
+++ b/Css/style.css
@@ -118,8 +118,7 @@ a:hover {
 
 /*Menu Scroll Down*/
 
-.iconMenu
-{
+.iconMenu {
   width: 5%;
   height: auto;
   float: left;
@@ -144,7 +143,7 @@ a:hover {
   color: white;
 }
 
-.navMenuScrollD{
+.navMenuScrollD {
   width: 100%;
 }
 
@@ -172,8 +171,7 @@ a:hover {
   color: black;
 }
 
-.searchBarnMGScrollD
-{
+.searchBarnMGScrollD {
   background-color: white;
   width: 20%;
   height: 90%;
@@ -258,7 +256,7 @@ a:hover {
   border-radius: 40%;
 }
 
-.map{
+.map {
   text-align: center;
 }
 
@@ -275,14 +273,12 @@ a:hover {
   font-size: 14px;
 }
 
-.formContacts
-{
+.formContacts {
   width: 40%;
   margin-left: 30%;
 }
 
-.labels
-{
+.labels {
   float: left;
   width: 15%;
 }
@@ -298,8 +294,7 @@ a:hover {
   outline: none;
 }
 
-.divInputName
-{
+.divInputName {
   width: 100%;
 }
 
@@ -308,8 +303,7 @@ a:hover {
   float: left;
 }
 
-.divInputEmail
-{
+.divInputEmail {
   width: 100%;
 }
 
@@ -318,8 +312,7 @@ a:hover {
   float: left;
 }
 
-.divInputCellphone
-{
+.divInputCellphone {
   width: 100%;
 }
 
@@ -328,8 +321,7 @@ a:hover {
   float: left;
 }
 
-.divInputMatter
-{
+.divInputMatter {
   width: 100%;
 }
 
@@ -338,8 +330,7 @@ a:hover {
   float: left;
 }
 
-.divInputEnterprise
-{
+.divInputEnterprise {
   width: 100%;
 }
 
@@ -348,8 +339,7 @@ a:hover {
   float: left;
 }
 
-.divInputMessage
-{
+.divInputMessage {
   width: 100%;
 }
 
@@ -363,7 +353,7 @@ a:hover {
   margin-left: 5%;
 }
 
-.button{
+.button {
   float: left;
   width: auto;
   padding: 2% 3% 2% 3%;
@@ -372,13 +362,11 @@ a:hover {
   background-color: white;
 }
 
-.button:focus
-{
+.button:focus {
   outline: none;
 }
 
-.btnSend
-{
+.btnSend {
   margin-left: 5%;
   float: left;
   border: none;
@@ -386,8 +374,7 @@ a:hover {
   color: white;
 }
 
-.btnClean
-{
+.btnClean {
   margin-right: 5%;
   float: right;
   border: none;
@@ -434,8 +421,7 @@ a:hover {
   color: black;
 }
 
-.searchBarnMG
-{
+.searchBarnMG {
   background-color: white;
   width: 85%;
   height: 90%;
@@ -584,7 +570,7 @@ a:hover {
 
 /*End caroussel*/
 
-/*Marcas da pagina marcas*/ 
+/*Marcas da pagina marcas*/
 
 .marcasGallery {
   width: 100%;
@@ -1051,101 +1037,93 @@ footer {
 
   /*Form*/
 
-.tittleContacts {
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
-}
+  .tittleContacts {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+  }
 
-.introContatcs {
-  text-align: center;
-  font-size: 14px;
-}
+  .introContatcs {
+    text-align: center;
+    font-size: 14px;
+  }
 
-.formContacts
-{
-  width: 60%;
-  margin-left: 20%;
-}
+  .formContacts {
+    width: 60%;
+    margin-left: 20%;
+  }
 
-.labels
-{
-  float: left;
-  width: 22%;
-}
+  .labels {
+    float: left;
+    width: 22%;
+  }
 
-.inputs {
-  padding-left: 0.5%;
-  padding-top: 0.5%;
-  padding-right: 0.5%;
-  padding-bottom: 0.5%;
-}
+  .inputs {
+    padding-left: 0.5%;
+    padding-top: 0.5%;
+    padding-right: 0.5%;
+    padding-bottom: 0.5%;
+  }
 
-.divInputName
-{
-  width: 100%;
-}
+  .divInputName {
+    width: 100%;
+  }
 
-.inputName {
-  width: 55%;
-  float: left;
-}
+  .inputName {
+    width: 55%;
+    float: left;
+  }
 
-.divInputEmail
-{
-  width: 100%;
-}
+  .divInputEmail {
+    width: 100%;
+  }
 
-.inputEmail {
-  width: 55%;
-  float: left;
-}
+  .inputEmail {
+    width: 55%;
+    float: left;
+  }
 
-.divInputCellphone
-{
-  width: 100%;
-}
+  .divInputCellphone {
+    width: 100%;
+  }
 
-.inputCellphone {
-  width: 20%;
-  float: left;
-}
+  .inputCellphone {
+    width: 20%;
+    float: left;
+  }
 
-.divInputMatter
-{
-  width: 100%;
-}
+  .divInputMatter {
+    width: 100%;
+  }
 
-.inputMatter {
-  width: 55%;
-  float: left;
-}
+  .inputMatter {
+    width: 55%;
+    float: left;
+  }
 
-.divInputEnterprise
-{
-  width: 100%;
-}
+  .divInputEnterprise {
+    width: 100%;
+  }
 
-.inputEnterprise {
-  width: 55%;
-  float: left;
-}
+  .inputEnterprise {
+    width: 55%;
+    float: left;
+  }
 
-.divInputMessage
-{
-  width: 100%;
-}
+  .divInputMessage {
+    width: 100%;
+  }
 
-.inputMessage {
-  width: 100%;
-  height: 100px;
-}
+  .inputMessage {
+    width: 100%;
+    height: 100px;
+  }
 
-.textContatosI {
-  margin-left: 5%;
-}
+  .textContatosI {
+    margin-left: 5%;
+  }
 
-/*Form*/
+  /*Form*/
 
   /*footer*/
 
@@ -1420,96 +1398,88 @@ footer {
 
   /*Form*/
 
-.tittleContacts {
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
-}
+  .tittleContacts {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+  }
 
-.introContatcs {
-  text-align: center;
-  font-size: 14px;
-}
+  .introContatcs {
+    text-align: center;
+    font-size: 14px;
+  }
 
-.formContacts
-{
-  width: 98%;
-  margin-left: 1%;
-  margin-right: 1%;
-}
+  .formContacts {
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
 
-.labels
-{
-  float: left;
-  width: 20%;
-}
+  .labels {
+    float: left;
+    width: 20%;
+  }
 
-.inputs {
-  padding-left: 1%;
-  padding-top: 1%;
-  padding-right: 1%;
-  padding-bottom: 1%;
-}
+  .inputs {
+    padding-left: 1%;
+    padding-top: 1%;
+    padding-right: 1%;
+    padding-bottom: 1%;
+  }
 
-.divInputName
-{
-  width: 100%;
-}
+  .divInputName {
+    width: 100%;
+  }
 
-.inputName {
-  width: 70%;
-}
+  .inputName {
+    width: 70%;
+  }
 
-.divInputEmail
-{
-  width: 100%;
-}
+  .divInputEmail {
+    width: 100%;
+  }
 
-.inputEmail {
-  width: 70%;
-}
+  .inputEmail {
+    width: 70%;
+  }
 
-.divInputCellphone
-{
-  width: 100%;
-}
+  .divInputCellphone {
+    width: 100%;
+  }
 
-.inputCellphone {
-  width: 30%;
-}
+  .inputCellphone {
+    width: 30%;
+  }
 
-.divInputMatter
-{
-  width: 100%;
-}
+  .divInputMatter {
+    width: 100%;
+  }
 
-.inputMatter {
-  width: 70%;
-}
+  .inputMatter {
+    width: 70%;
+  }
 
-.divInputEnterprise
-{
-  width: 100%;
-}
+  .divInputEnterprise {
+    width: 100%;
+  }
 
-.inputEnterprise {
-  width: 70%;
-}
+  .inputEnterprise {
+    width: 70%;
+  }
 
-.divInputMessage
-{
-  width: 100%;
-}
+  .divInputMessage {
+    width: 100%;
+  }
 
-.inputMessage {
-  width: 100%;
-}
+  .inputMessage {
+    width: 100%;
+  }
 
-.textContatosI {
-  margin-left: 5%;
-}
+  .textContatosI {
+    margin-left: 5%;
+  }
 
-/*Form*/
+  /*Form*/
 
   /*footer*/
 
