--- a/Css/style.css
+++ b/Css/style.css
@@ -137,12 +137,11 @@ a:hover {
 
 .navScrollD {
   display: block;
-  /* visibility: hidden; */
   background-color: #4bc726;
   position: fixed;
   width: 100%;
   z-index: 10;
-  top: -100px;
+  top: -132px;
   transition: 0.1s;
   border-bottom: 1px solid#37911b;
 }
@@ -831,13 +830,6 @@ footer {
     display: inline-block;
   }
 
-  nav {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    text-align: center;
-  }
-
   li {
     padding-top: 1%;
     padding-left: 5px;
@@ -852,23 +844,73 @@ footer {
     text-decoration: none;
   }
 
-  /*searchbar*/
+  /*Menu Scroll Down*/
 
-  /* .search {
-    
-  } */
-
-  .searchMG {
-    margin-top: 2%;
-    margin-left: 2%;
+  .iconMenu {
+    width: 5%;
+    height: auto;
+    float: left;
+    padding: 0.5% 0.5% 0.5% 0.5%;
   }
 
-  .searchMGSearch {
-    margin-top: 2%;
-    margin-left: 2%;
+  .menuTextScrollD {
+    text-decoration: none;
+    color: black;
+    font-family: sans-serif;
+    font-size: 18px;
+    padding: 0% 1.5% 1% 1.5%;
+    font-weight: bold;
+    width: auto;
+    float: left;
+    margin-top: 1.5%;
   }
 
-  /*End searchbar*/
+  .navScrollD {
+    display: block;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+    top: -165px;
+    transition: 0.1s;
+  }
+
+  /*Searchbar Scroll Down*/
+
+  .searchMGSearchScrollD {
+    color: black;
+    font-size: 30px;
+    margin-left: 1%;
+    padding-top: 1%;
+  }
+
+  .searchBarnMGScrollD {
+    width: 20%;
+    height: 90%;
+    float: right;
+    margin-top: 1%;
+    margin-right: 1%;
+    vertical-align: middle;
+    border-radius: 20px;
+    border: 1px rgb(0, 0, 0, 0.753) solid;
+  }
+
+  .searchBarScrollD {
+    float: left;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border: none;
+    margin-left: 7%;
+    margin-bottom: 1%;
+    display: block;
+    font-size: 18px;
+    width: 70%;
+  }
+
+  /*End Searchbar Scroll Down*/
+
+  /*End Menu Scroll Down*/
 
   /* main */
 
