--- a/Css/style.css
+++ b/Css/style.css
@@ -847,22 +847,28 @@ footer {
   /*Menu Scroll Down*/
 
   .iconMenu {
-    width: 5%;
+    width: 17%;
     height: auto;
     float: left;
     padding: 0.5% 0.5% 0.5% 0.5%;
+  }
+
+  .navMenuScrollD
+  {
+    width: 80%;
   }
 
   .menuTextScrollD {
     text-decoration: none;
     color: black;
     font-family: sans-serif;
-    font-size: 18px;
+    font-size: 17px;
     padding: 0% 1.5% 1% 1.5%;
     font-weight: bold;
     width: auto;
     float: left;
     margin-top: 1.5%;
+ 
   }
 
   .navScrollD {
@@ -884,7 +890,7 @@ footer {
   }
 
   .searchBarnMGScrollD {
-    width: 20%;
+    width: 30%;
     height: 90%;
     float: right;
     margin-top: 1%;
@@ -1236,9 +1242,6 @@ footer {
   /* header */
 
   .header {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
     width: 100%;
     z-index: 9;
   }
@@ -1288,12 +1291,9 @@ footer {
     float: left;
     visibility: visible;
     font-size: 40px;
-    position: absolute;
+    position: fixed;
     z-index: 999;
     margin-left: 90%;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
     margin-top: -26%;
     color: white;
   }
@@ -1312,15 +1312,9 @@ footer {
     padding-bottom: 2%;
   }
 
-  .menuText:hover {
-    font-weight: bold;
-  }
-
   nav {
     text-align: center;
     display: none;
-    position: fixed;
-    margin-top: 25%;
     width: 100%;
   }
 
@@ -1331,22 +1325,79 @@ footer {
     width: 100%;
     list-style: none;
   }
+  /*End Menu*/
 
-  /*searchbar*/
+  /*Menu Scroll Down*/
 
-  /* .search {
-    
-  } */
-
-  .searchMG {
-    margin-top: 3%;
+  .iconMenu {
+    width: 11%;
+    height: auto;
+    float: left;
+    padding: 0.5% 0.5% 0.5% 0.5%;
   }
 
-  .searchMGSearch {
-    margin-top: 3%;
+  .menuTextScrollD {
+    display: none;
   }
 
-  /*End searchbar*/
+  .navMenuScrollD {
+    width: 100%;
+  }
+
+  .navScrollD {
+    display: block;
+    background-color: #4bc726;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+    top: -121px;
+    transition: 0.1s;
+    border-bottom: 1px solid#37911b;
+  }
+
+  /*Searchbar Scroll Down*/
+
+  .searchMGSearchScrollD {
+    color: black;
+    font-size: 30px;
+    margin-left: 1%;
+    padding-top: 1%;
+  }
+
+  .searchMGSearchScrollD:hover {
+    color: black;
+  }
+
+  .searchBarnMGScrollD {
+    background-color: white;
+    width: 70%;
+    height: 90%;
+    margin-top: 1.5%;
+    margin-right: 15%;
+    border: 1px rgb(0, 0, 0, 0.753) solid;
+  }
+
+  .searchBarScrollD {
+    float: left;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 7px;
+    padding-top: 6px;
+    border: none;
+    margin-left: 7%;
+    margin-bottom: 1%;
+    display: block;
+    font-size: 18px;
+    width: 70%;
+  }
+
+  .searchBarScrollD:focus {
+    outline: none;
+  }
+
+  /*End Searchbar Scroll Down*/
+
+  /*End Menu Scroll Down*/
 
   /* main */
 
