--- a/Css/style.css
+++ b/Css/style.css
@@ -335,6 +335,7 @@ a:hover {
   width: 100%;
   height: 100px;
   float: left;
+  resize:vertical;
 }
 
 .textContatosI {
@@ -812,9 +813,28 @@ footer {
 
   /*Menu*/
 
-  .topBtnPhone {
+  /* .topBtnPhone {
     visibility: hidden;
     position: absolute;
+  } */
+
+  .topBtnPhone {
+    width: 10%;
+    height: 10%;
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    float: left;
+    visibility: hidden;
+    font-size: 40px;
+    position: fixed;
+    z-index: 999;
+    margin-left: 90%;
+    margin-top: -22%;
+    color: white;
+  }
+
+  .closeMenuCross {
+    visibility: hidden;
   }
 
   .menuText {
@@ -847,7 +867,7 @@ footer {
   /*Menu Scroll Down*/
 
   .iconMenu {
-    width: 17%;
+    width: 10%;
     height: auto;
     float: left;
     padding: 0.5% 0.5% 0.5% 0.5%;
@@ -855,11 +875,12 @@ footer {
 
   .navMenuScrollD
   {
-    width: 80%;
+    /* width: 100%; */
+    /* margin-left: 0%; */
   }
 
   .menuTextScrollD {
-    text-decoration: none;
+    /* text-decoration: none;
     color: black;
     font-family: sans-serif;
     font-size: 17px;
@@ -867,17 +888,22 @@ footer {
     font-weight: bold;
     width: auto;
     float: left;
-    margin-top: 1.5%;
- 
+    margin-top: 1.5%; */
+    /* display: block; */
+    /* position: absolute; */
+    width: 100%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    /* visibility: hidden; */
   }
 
   .navScrollD {
     display: block;
-    position: fixed;
     width: 100%;
     z-index: 10;
     top: -165px;
     transition: 0.1s;
+    /* height: 10%;  */
   }
 
   /*Searchbar Scroll Down*/
@@ -890,14 +916,14 @@ footer {
   }
 
   .searchBarnMGScrollD {
-    width: 30%;
-    height: 90%;
-    float: right;
+    width: 50%;
+    height: 6%;
     margin-top: 1%;
-    margin-right: 1%;
+    margin-left: 25%;
     vertical-align: middle;
     border-radius: 20px;
     border: 1px rgb(0, 0, 0, 0.753) solid;
+    position: fixed;
   }
 
   .searchBarScrollD {
@@ -1343,7 +1369,7 @@ footer {
 
   .navMenuScrollD {
     width: 100%;
-    margin-top: 15%;
+    margin-top: 0%;
   }
 
   .navScrollD {
@@ -1377,6 +1403,8 @@ footer {
     margin-top: 1.5%;
     margin-right: 15%;
     border: 1px rgb(0, 0, 0, 0.753) solid;
+    position: initial;
+
   }
 
   .searchBarScrollD {
@@ -1548,10 +1576,12 @@ footer {
 
   .divInputMessage {
     width: 100%;
+    
   }
 
   .inputMessage {
     width: 100%;
+    
   }
 
   .textContatosI {
