--- a/Css/style.css
+++ b/Css/style.css
@@ -1365,13 +1365,12 @@ footer {
 
   .navScrollD {
     display: block;
-    background-color: #4bc726;
     position: fixed;
     width: 100%;
     z-index: 10;
     top: -121px;
     transition: 0.1s;
-    border-bottom: 1px solid#37911b;
+    height: auto;
   }
 
   /*Searchbar Scroll Down*/
@@ -1391,7 +1390,7 @@ footer {
     background-color: white;
     width: 70%;
     height: 90%;
-    margin-top: 1.5%;
+    margin-top: -9%;
     margin-right: 15%;
     border: 1px rgb(0, 0, 0, 0.753) solid;
     position: initial;
