--- a/Css/style.css
+++ b/Css/style.css
@@ -813,11 +813,6 @@ footer {
 
   /*Menu*/
 
-  /* .topBtnPhone {
-    visibility: hidden;
-    position: absolute;
-  } */
-
   .topBtnPhone {
     width: 10%;
     height: 10%;
@@ -827,7 +822,7 @@ footer {
     visibility: hidden;
     font-size: 40px;
     position: fixed;
-    z-index: 999;
+    z-index: 9999999999;
     margin-left: 90%;
     margin-top: -22%;
     color: white;
@@ -871,12 +866,6 @@ footer {
     height: auto;
     float: left;
     padding: 0.5% 0.5% 0.5% 0.5%;
-  }
-
-  .navMenuScrollD
-  {
-    /* width: 100%; */
-    /* margin-left: 0%; */
   }
 
   .menuTextScrollD {
