--- a/Css/style.css
+++ b/Css/style.css
@@ -69,7 +69,7 @@ a {
   color: black;
   font-family: sans-serif;
   font-size: 15px;
-  font-weight: 500;
+  font-weight: bold;
   padding-top: 1%;
   padding-bottom: 1%;
   visibility: visible;
@@ -778,7 +778,6 @@ footer {
   /*Top*/
 
   .top {
-    width: 100%;
     padding-top: 1%;
     vertical-align: middle;
     text-align: center;
@@ -1235,40 +1234,9 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
-  /*Phone*/
+  /*Phone*/ /*Otimizied? :3*/
 
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-
-  /* header */
-
-  .header {
-    width: 100%;
-    z-index: 9;
-  }
-
-  /* top */
-
-  .top {
-    width: auto;
-    padding-top: 1%;
-    vertical-align: middle;
-    text-align: center;
-    z-index: 9999999;
-  }
-
-  .logo {
-    vertical-align: middle;
-    display: inline-block;
-    width: auto;
-  }
-
-  .logoIMG {
-    height: 70px;
-  }
+  /*Top*/
 
   .weatherWidget {
     display: none;
@@ -1285,14 +1253,13 @@ footer {
     display: inline-block;
   }
 
-  /* menu */
+  /*Menu*/
 
   .topBtnPhone {
     width: 10%;
     height: 10%;
     background-color: rgba(255, 255, 255, 0);
     border: none;
-    float: left;
     visibility: visible;
     font-size: 40px;
     position: fixed;
@@ -1343,16 +1310,10 @@ footer {
     display: none;
   }
 
-  .navMenuScrollD {
-    width: 100%;
-    margin-top: 0%;
-  }
-
   .navScrollD {
     display: block;
     position: fixed;
     width: 100%;
-    z-index: 10;
     top: -121px;
     transition: 0.1s;
     height: auto;
@@ -1361,58 +1322,27 @@ footer {
   /*Searchbar Scroll Down*/
 
   .searchMGSearchScrollD {
-    color: black;
     font-size: 30px;
     margin-left: 1%;
     padding-top: 1%;
   }
 
-  .searchMGSearchScrollD:hover {
-    color: black;
-  }
-
   .searchBarnMGScrollD {
-    background-color: white;
     width: 70%;
     height: 90%;
     margin-top: -9%;
     margin-right: 15%;
-    border: 1px rgb(0, 0, 0, 0.753) solid;
     position: initial;
-
-  }
-
-  .searchBarScrollD {
-    float: left;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    border: none;
-    margin-left: 7%;
-    display: block;
-    font-size: 18px;
-    width: 70%;
   }
 
   /*End Searchbar Scroll Down*/
 
   /*End Menu Scroll Down*/
 
-  /* main */
-
-  .slideshow {
-    width: 100%;
-    height: auto;
-  }
+  /*Main*/
 
   .slideshowimgs {
-    width: 100%;
     height: auto;
-  }
-
-  .news {
-    display: none;
   }
 
   .newsTabletPhone {
@@ -1462,11 +1392,6 @@ footer {
     margin-left: -6%;
   }
 
-  .welcome {
-    width: 98%;
-    text-align: justify;
-  }
-
   .gallery {
     padding-left: 0%;
     width: 100%;
@@ -1478,7 +1403,7 @@ footer {
     height: 300px;
   }
 
-  /*Form*/
+  /*Form*/ /*To see ;-;*/
 
   .tittleContacts {
     text-align: center;
@@ -1563,9 +1488,9 @@ footer {
     margin-left: 5%;
   }
 
-  /*Form*/
+  /*End Form*/
 
-  /*footer*/
+  /*Footer*/
 
   a {
     font-size: 11px;
